--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "baseUrl": "./src",
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "target": "es2020"
     },
     "exclude": ["./src/template"]
 }
